# devenv

./: .gitignore  .tmux.conf  .wezterm.lua  CHANGELOG.md  CLAUDE.md  CLAUDE.template.md  README.md  install.sh  lazy-lock.json  lazyvim.json  lfrc  seminar-draft.js  starship.toml  statusline.sh
.claude-plugin/: marketplace.json
ai-docs/: _index.md  mental-model.md
ai-docs/mental-model/: doc-tooling.md  executor-wrapup.md  personal-devenv.md  spec-system.md  tools.md  workflow-routing.md
ai-docs/ref/: codex-integration.md  skill-authoring.md  ticket-conventions.md
ai-docs/ship/: ws.md
ai-docs/spec/: agent-system.md  api-deps.md  personal-devenv.md  plugin-infra.md  plugin-management.md  skills.md  spec-system.md  tools.md  workflow-skills.md
claude/: CLAUDE.home.md  CLAUDE.md  CLAUDE.template.md
claude-agents/: document-dependency.md  explore-rust-crate.md  mental-model-updater.md  mental-model-verifier.md  rust-api-lookup.md
claude-plugin/: CLAUDE.home.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: clerk.md  code-reviewer.md
claude-plugin/infra/: cargo-brief.md  (+7 more)
nvim/: lazy-lock.json
scripts/: tmux-claude-indicator.sh  tmux-cross-window.sh  tmux-fzf-command.sh
shell/: .tmux.conf  .vscode-neovim.lua  .wezterm.lua  statusline.sh
tools/claude-dash/: Cargo.toml
tools/claude-dash/src/: agent.rs  app.rs  main.rs  parser.rs  pty.rs  renderer.rs  session.rs  ui.rs  vt.rs  worktree.rs  wrap.rs
tools/claude-watch/: Cargo.toml
tools/claude-watch/src/: app.rs  main.rs  parser.rs  process.rs  renderer.rs  session.rs  ui.rs
(+284 files in other folders)
