[package]
name = "claude-dash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-dash"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
termwiz = "0.23"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
