[package]
name = "claude-watch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-watch"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"
unicode-width = "0.2"
